--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3
+  shared_preferences: ^2.2.1
 
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: ^0.13.3
 
   flutter_lints: ^2.0.0
 
